--- a/packages/express-backend/package.json
+++ b/packages/express-backend/package.json
@@ -12,6 +12,9 @@
     "start": "node backend.js"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "mongoose": "^9.1.5"
   }
 }
